@@ -53,6 +53,10 @@ slice1
  1... 2... 3... 4... 5... 6... 7...
 size_in_bytes_general
  1...
+------ Genarray 0 dimensions --------
+
+create/set/get
+ 1... 2... 3... 4... 5... 6... 7... 8... 9... 10... 11... 12...
 kind_size_in_bytes
  1... 2... 3... 4... 5... 6... 7... 8... 9... 10... 11... 12... 13...
 
@@ -62,6 +66,8 @@ reshape_1
  1... 2...
 reshape_2
  1... 2... 3... 4... 5... 6... 7...
+reshape
+ 8... 9... 10...
 
 ------ I/O --------
 
